--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -132,11 +132,11 @@
             </li>
             <li class="nav-item">
               <a
-                href="/charts-inline.html"
-                class="nav-link {% if 'charts-inline' in segment %} active {% endif %}"
+                href="/charts-chartjs copy.html"
+                class="nav-link {% if 'charts-chartjs' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
-                <p>Inline</p>
+                <p>Mis Gráficos</p>
               </a>
             </li>
           </ul>
@@ -157,81 +157,11 @@
           <ul class="nav nav-treeview">
             <li class="nav-item">
               <a
-                href="/forms-general.html"
+                href="/forms-trabajador.html"
                 class="nav-link {% if 'forms-general' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
-                <p>General Elements</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/forms-advanced.html"
-                class="nav-link {% if 'forms-advanced' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Advanced Elements</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/forms-editors.html"
-                class="nav-link {% if 'forms-editors' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Editors</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/forms-validation.html"
-                class="nav-link {% if 'forms-validation' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Validation</p>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li
-          class="nav-item has-treeview {% if 'tables-' in segment %} menu-open {% endif %}"
-        >
-          <a
-            href="#"
-            class="nav-link {% if 'tables-' in segment %} active {% endif %}"
-          >
-            <i class="nav-icon fas fa-table"></i>
-            <p>
-              Tables
-              <i class="fas fa-angle-left right"></i>
-            </p>
-          </a>
-          <ul class="nav nav-treeview">
-            <li class="nav-item">
-              <a
-                href="/tables-simple.html"
-                class="nav-link {% if 'tables-simple' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Simple Tables</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/tables-data.html"
-                class="nav-link {% if 'tables-data' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>DataTables</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/tables-jsgrid.html"
-                class="nav-link {% if 'tables-jsgrid' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>jsGrid</p>
+                <p>Trabajadores</p>
               </a>
             </li>
           </ul>
@@ -414,7 +344,7 @@
         <!-- User settings -->
         <li class="nav-header">SESIÓN</li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="/profile-main.html" class="nav-link">
             <i class="nav-icon fas fa-cogs"></i>
             <p>Configuración de Perfil</p>
           </a>
