--- a/apps/templates/home/charts-chartjs.html
+++ b/apps/templates/home/charts-chartjs.html
@@ -146,6 +146,66 @@
         </div>
       </div>
       <!-- /.row -->
+      <!-- Additional Card for Educational Level -->
+      <div class="col-md-6">
+        <div class="card card-info">
+          <div class="card-header">
+            <h3 class="card-title">Distribución por Nivel Educativo</h3>
+            <div class="card-tools">
+              <button
+                type="button"
+                class="btn btn-tool"
+                data-card-widget="collapse"
+              >
+                <i class="fas fa-minus"></i>
+              </button>
+              <button
+                type="button"
+                class="btn btn-tool"
+                data-card-widget="remove"
+              >
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+          </div>
+          <div class="card-body">
+            <canvas id="educationChart" style="min-height: 250px"></canvas>
+          </div>
+          <!-- /.card-body -->
+        </div>
+      </div>
+
+      <!-- Additional Card for Registered Members -->
+      <div class="col-md-6">
+        <div class="card card-warning">
+          <div class="card-header">
+            <h3 class="card-title">Miembros Colegiados</h3>
+            <div class="card-tools">
+              <button
+                type="button"
+                class="btn btn-tool"
+                data-card-widget="collapse"
+              >
+                <i class="fas fa-minus"></i>
+              </button>
+              <button
+                type="button"
+                class="btn btn-tool"
+                data-card-widget="remove"
+              >
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+          </div>
+          <div class="card-body">
+            <canvas
+              id="registeredMembersChart"
+              style="min-height: 250px"
+            ></canvas>
+          </div>
+          <!-- /.card-body -->
+        </div>
+      </div>
     </div>
     <!-- /.container-fluid -->
   </section>
