--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -26,7 +26,9 @@
         <a class="d-block">
           {{ current_user.usuario_nombres }} {{current_user.usuario_apellidos}}
         </a>
-        <a class="d-block">{{current_user.usuario_rol }}</a>
+        <!-- 
+          <a class="d-block">{{current_user.id_usuario_rol_id.nombre }}</a>
+        -->
       </div>
     </div>
 
