--- a/apps/templates/home/employees.html
+++ b/apps/templates/home/employees.html
@@ -103,7 +103,6 @@
 <!-- AdminLTE for demo purposes -->
 <script src="/static/assets/js/demo.js"></script>
 <!-- page script -->
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-
-{% endblock javascripts %}
+ <!-- Mi script apiUtils.js -->
+ <script src="/static/assets/js/index/apiUtils.js"></script>
+ {% endblock javascripts %}
