--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -124,7 +124,7 @@
         <div class="row">
           <!-- Left col -->
           <section class="col-lg-12 connectedSortable">
-            <div class="card">
+            <div class="container-fluid">
               <h1>Hola Pruebas</h1>
             </div>
             <!-- /.card -->
