Editando malgunas cosas Co-authored-by: pparedesn <patrick341@users.noreply.github.com>

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -179,4 +179,6 @@
   <script src="/static/assets/js/demo.js"></script>
   <!-- Mi script apiUtils.js -->
   <script src="/static/assets/js/index/apiUtils.js"></script>
+  <!-- Script de la pagina-->
+  <script src="/static/assets/js/index/index.js"></script>
 {% endblock javascripts %}
