--- a/apps/templates/home/dash-users.html
+++ b/apps/templates/home/dash-users.html
@@ -64,7 +64,6 @@
                     <th>Apellido</th>
                     <th>Rol</th>
                     <th>Correo Electrónico</th>
-                    <th>Sexo</th>
                     <th>Teléfono</th>
                   </tr>
                 </thead>
@@ -105,4 +104,5 @@
 <!-- page script -->
  <!-- Mi script apiUtils.js -->
  <script src="/static/assets/js/index/apiUtils.js"></script>
+ <script src="/static/assets/js/index/usuarios.js"></script>
  {% endblock javascripts %}
