--- a/apps/templates/home/forms-trabajador.html
+++ b/apps/templates/home/forms-trabajador.html
@@ -216,310 +216,6 @@ endblock %}
             </form>
           </div>
         </div>
-        <!-- Formulario de Cuenta Bancaria (derecha) -->
-        <div class="col-md-6">
-          <div class="card card-info">
-            <div class="card-header">
-              <h3 class="card-title">Formulario de Cuenta Bancaria</h3>
-            </div>
-            <form>
-              <div class="card-body">
-                <!-- Campos para el formulario de cuenta bancaria -->
-                <div class="form-group">
-                  <label for="cuentaBancariaCCI">Cuenta Bancaria CCI</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="cuentaBancariaCCI"
-                    placeholder="Ingrese número de cuenta CCI"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="cuentaBancariaCodigo"
-                    >Cuenta Bancaria Código</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="cuentaBancariaCodigo"
-                    placeholder="Ingrese número de cuenta código"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="cuentaBancariaBanco">Cuenta Bancaria Banco</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="cuentaBancariaBanco"
-                    placeholder="Ingrese nombre del banco"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="cuentaBancariaTipo">Cuenta Bancaria Tipo</label>
-                  <select class="form-control" id="cuentaBancariaTipo">
-                    <option value="sueldo">Sueldo</option>
-                    <option value="CTS">CTS</option>
-                  </select>
-                </div>
-              </div>
-              <div class="card-footer">
-                <button type="submit" class="btn btn-info">
-                  Guardar Cuenta Bancaria
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-
-        <!-- Formulario de Sueldo (izquierda) -->
-        <div class="col-md-6">
-          <div class="card card-info">
-            <div class="card-header">
-              <h3 class="card-title">Formulario de Sueldo</h3>
-            </div>
-            <form>
-              <div class="card-body">
-                <!-- Campos para el formulario de sueldo -->
-                <div class="form-group">
-                  <label for="sueldoValorBasico">Sueldo Valor Básico</label>
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="sueldoValorBasico"
-                    placeholder="Ingrese sueldo valor básico"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="sueldoAsigFamPorcentaje"
-                    >Sueldo Asignación Familiar (%)</label
-                  >
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="sueldoAsigFamPorcentaje"
-                    placeholder="Ingrese porcentaje de asignación familiar"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="sueldoBonoPorcentaje">Sueldo Bono (%)</label>
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="sueldoBonoPorcentaje"
-                    placeholder="Ingrese porcentaje de bono"
-                  />
-                </div>
-              </div>
-              <div class="card-footer">
-                <button type="submit" class="btn btn-info">
-                  Guardar Sueldo
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-
-        <!-- Formulario de Dirección (izquierda) -->
-        <div class="col-md-6">
-          <div class="card card-success">
-            <div class="card-header">
-              <h3 class="card-title">Formulario de Dirección</h3>
-            </div>
-            <form>
-              <div class="card-body">
-                <!-- Campos para el formulario de dirección -->
-                <div class="form-group">
-                  <label for="direccionPais">País</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="direccionPais"
-                    placeholder="Ingrese país"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="direccionDepartamento">Departamento</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="direccionDepartamento"
-                    placeholder="Ingrese departamento"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="direccionProvincia">Provincia</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="direccionProvincia"
-                    placeholder="Ingrese provincia"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="direccionDistrito">Distrito</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="direccionDistrito"
-                    placeholder="Ingrese distrito"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="direccionDetalle">Detalle de Dirección</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="direccionDetalle"
-                    placeholder="Ingrese detalle de dirección"
-                  />
-                </div>
-              </div>
-              <div class="card-footer">
-                <button type="submit" class="btn btn-success">
-                  Guardar Dirección
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-
-        <!-- Formulario de Contrato (derecha) -->
-        <div class="col-md-6">
-          <div class="card card-success">
-            <div class="card-header">
-              <h3 class="card-title">Formulario de Contrato</h3>
-            </div>
-            <form>
-              <div class="card-body">
-                <!-- Campos para el formulario de contrato -->
-                <div class="form-group">
-                  <label for="contratoTipo">Tipo de Contrato</label>
-                  <select class="form-control" id="contratoTipo">
-                    <option value="plazo_fijo">A plazo fijo</option>
-                    <option value="extranjero">De extranjero</option>
-                    <option value="necesidad_mercado">
-                      Por necesidad de mercado
-                    </option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="contratoOpcion">Opción de Contrato</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="contratoOpcion"
-                    placeholder="Ingrese opción de contrato"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="empleoTipo">Tipo de Empleo</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="empleoTipo"
-                    placeholder="Ingrese tipo de empleo"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="empleoSituacion">Situación Laboral</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="empleoSituacion"
-                    placeholder="Ingrese situación laboral"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="empleoArea">Área de Empleo</label>
-                  <select class="form-control" id="empleoArea">
-                    <option value="abastecimiento">Abastecimiento</option>
-                    <option value="administracion">Administración</option>
-                    <option value="contratos">Contratos</option>
-                    <option value="control_proyectos">
-                      Control de Proyectos
-                    </option>
-                    <option value="ingenieria">Ingeniería</option>
-                    <option value="ti">TI</option>
-                    <option value="no_especificado" selected>
-                      No Especificado
-                    </option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="empleoProyecto">Proyecto</label>
-                  <select class="form-control" id="empleoProyecto">
-                    <option value="arequipa">Arequipa</option>
-                    <option value="centenario_lithium">
-                      Centenario Lithium
-                    </option>
-                    <option value="no_especificado" selected>
-                      No Especificado
-                    </option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="empleoDepartamento">Departamento</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="empleoDepartamento"
-                    placeholder="Ingrese departamento"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="empleoCargo">Cargo</label>
-                  <select class="form-control" id="empleoCargo">
-                    <option value="no_especificado" selected>
-                      No Especificado
-                    </option>
-                    <option value="PE-Jr_Personnel_I">PE-Jr Personnel I</option>
-                    <option value="PE-Jr_Personnel_II">
-                      PE-Jr Personnel II
-                    </option>
-                    <option value="PE-Jr_Personnel_III">
-                      PE-Jr Personnel III
-                    </option>
-                    <option value="PE-Jr_Personnel_IV">
-                      PE-Jr Personnel IV
-                    </option>
-                    <option value="PE-Jr_Personnel_V">PE-Jr Personnel V</option>
-                    <option value="PE-Int_Personnel_I">
-                      PE-Int Personnel I
-                    </option>
-                    <option value="PE-Int_Personnel_II">
-                      PE-Int Personnel II
-                    </option>
-                    <option value="PE-Int_Personnel_III">
-                      PE-Int Personnel III
-                    </option>
-                    <option value="PE-Int_Personnel_IV">
-                      PE-Int Personnel IV
-                    </option>
-                    <option value="PE-Int_Personnel_V">
-                      PE-Int Personnel V
-                    </option>
-                    <option value="PE-Sr_Personnel_I">PE-Sr Personnel I</option>
-                    <option value="PE-Sr_Personnel_II">
-                      PE-Sr Personnel II
-                    </option>
-                    <option value="PE-Sr_Personnel_III">
-                      PE-Sr Personnel III
-                    </option>
-                    <option value="PE-Sr_Personnel_IV">
-                      PE-Sr Personnel IV
-                    </option>
-                    <option value="PE-Sr_Personnel_V">PE-Sr Personnel V</option>
-                  </select>
-                </div>
-              </div>
-              <div class="card-footer">
-                <button type="submit" class="btn btn-success">
-                  Guardar Contrato
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
 
         <!-- Formulario de Estudio (tipo info) -->
         <div class="col-md-12">
@@ -710,6 +406,7 @@ endblock %}
 <script src="/static/assets/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/static/assets/js/demo.js"></script>
+<script src="/static/assets/js/index/apiUtils.js"></script>
 <script>
   $(function () {
     bsCustomFileInput.init();
