--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -73,7 +73,7 @@
           <ul class="nav nav-treeview">
             <li class="nav-item">
               <a
-                href="/employees.html"
+                href="/dash-users.html"
                 class="nav-link {% if 'index.html' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
@@ -87,15 +87,6 @@
               >
                 <i class="far fa-circle nav-icon"></i>
                 <p>Dashboard BD</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/index3.html"
-                class="nav-link {% if 'index3.html' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Dashboard RH</p>
               </a>
             </li>
           </ul>
@@ -116,20 +107,11 @@
           <ul class="nav nav-treeview">
             <li class="nav-item">
               <a
-                href="/charts-chartjs.html"
+                href="/graph-my_graphics.html"
                 class="nav-link {% if 'charts-chartjs' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
                 <p>Mis Gráficos</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/charts-flot.html"
-                class="nav-link {% if 'charts-flot' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Flot</p>
               </a>
             </li>
             <li class="nav-item">
